add day put by name
