# src/controllers/days.js
@@ -45,46 +45,18 @@ const getOneDay = async (req, res) => {
 
 const getOneDaybyName = async (req, res) => {
   // #swagger.description = 'See one day by name'
+
   try {
+    const dayArray = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday'];
+    if (!dayArray.includes(req.params.name)) {
+      res.status(400).json('Must use a valid titlecase day name to see day.');
+    }
     const dayName = req.params.name;
     const day = await mongodb
       .getDatabase()
       .db(process.env.DB_NAME)
       .collection('Days')
       .find({ name: dayName });
-    day.toArray((err, result) => {
-      if (err) {
-        res.status(400).json({ message: err });
-      }
-      res.setHeader('Content-Type', 'application/json');
-      res.status(200).json(result[0]);
-    });
-  } catch (err) {
-    res.status(500).json(err);
-  }
-};
-
-const getOneMealbyDay = async (req, res) => {
-  // #swagger.description = 'See one day's meal'
-  try {
-    if (!ObjectId.isValid(req.params.id)) {
-      res.status(400).json('Must use a valid contact id to find a day.');
-    }
-    const dayId = new ObjectId(req.params.id);
-    const day = await mongodb
-      .getDatabase()
-      .db(process.env.DB_NAME)
-      .collection('Days')
-      .aggregate([
-        {
-          $lookup: {
-            from: 'Recipes',
-            localField: 'recipeName',
-            foreignField: 'name',
-            as: 'recipe'
-          }
-        }
-      ]);
     day.toArray((err, result) => {
       if (err) {
         res.status(400).json({ message: err });
@@ -177,6 +149,36 @@ const updateDay = async (req, res) => {
   }
 };
 
+const updateDaybyName = async (req, res) => {
+  // #swagger.description = 'Update day by ID'
+  try {
+    const dayArray = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday'];
+    if (!dayArray.includes(req.params.name)) {
+      res.status(400).json('Must use a valid titlecase day name to see day.');
+    }
+    const dayName = req.params.name;
+    const updateDay = {
+      name: req.body.name,
+      recipeName: req.body.recipeName
+    };
+    const update = await mongodb
+      .getDatabase()
+      .db(process.env.DB_NAME)
+      .collection('Days')
+      .replaceOne({ name: dayName }, updateDay);
+    console.log(update);
+    if (update.modifiedCount > 0) {
+      res.status(204).send();
+    } else {
+      res
+        .status(500)
+        .json(update.error || 'An error occurred while updating the day. Please try again later.');
+    }
+  } catch (err) {
+    res.status(500).json(err);
+  }
+};
+
 module.exports = {
   getAllDays,
   getOneDay,
@@ -184,5 +186,40 @@ module.exports = {
   deleteDay,
   createDay,
   getOneDaybyName,
-  getOneMealbyDay
+  updateDaybyName
 };
+
+//Future possible controls:
+
+// const getOneMealbyDay = async (req, res) => {
+//   // #swagger.description = 'See one day's meal'
+//   try {
+//     if (!ObjectId.isValid(req.params.id)) {
+//       res.status(400).json('Must use a valid contact id to find a day.');
+//     }
+//     const dayId = new ObjectId(req.params.id);
+//     const day = await mongodb
+//       .getDatabase()
+//       .db(process.env.DB_NAME)
+//       .collection('Days')
+//       .aggregate([
+//         {
+//           $lookup: {
+//             from: 'Recipes',
+//             localField: 'recipeName',
+//             foreignField: 'name',
+//             as: 'recipe'
+//           }
+//         }
+//       ]);
+//     day.toArray((err, result) => {
+//       if (err) {
+//         res.status(400).json({ message: err });
+//       }
+//       res.setHeader('Content-Type', 'application/json');
+//       res.status(200).json(result[0]);
+//     });
+//   } catch (err) {
+//     res.status(500).json(err);
+//   }
+// };
