# swagger.json
@@ -365,23 +365,46 @@
             "description": "Internal Server Error"
           }
         }
-      }
-    },
-    "/days/recipe/{id}": {
-      "get": {
-        "description": "See one day",
-        "produces": [
-          "application/json"
-        ],
+      },
+      "put": {
+        "description": "Update day by ID",
         "parameters": [
           {
-            "name": "id",
+            "name": "name",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "recipeName": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
-        "responses": {}
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     }
   }
